--- a/style.css
+++ b/style.css
@@ -57,8 +57,10 @@ textarea{
     cursor: pointer;
 }
 
-node0{
+#sticktext{
     width: 200px;
-    height: 50px;
-    background-color: red;
+    height: 200px;
+    font-size: 26px;
+    padding: 20px;
+    overflow: hidden;
 }
