--- a/style.css
+++ b/style.css
@@ -1,23 +1,50 @@
 body{
-    background: #c68c53a8;
     font-family: "Architects Daughter";
     font-size: 24px;
 }
 
 .main{
+    border-radius: 5px;
     width: 95%;
     margin: auto;
+    box-shadow: 0 10px 22px rgba(0, 0, 0, 0.09), 0 10px 10px rgba(0, 0, 0, 0.09);
+    height: 100%;
+}
+.nav{
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    box-shadow: 0 10px 22px rgba(0, 0, 0, 0.09), 0 10px 10px rgba(0, 0, 0, 0.09);
+    border-radius: 10px;
 }
 .cont1{
-    margin-left: 5%;
+    text-align: center;
+    margin: auto;
 }
+#BTN{
+    height: 50px;
+    width: 100px;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    border-radius: 5px;
+    background-color: #ff1476;
+    color: white;
+    -webkit-transition: color 0.3s ease-out;
+    transition: background-color 0.3s ease-out;
+}
+#BTN:hover{
+    color: black;
+    background-color: #ffd800;
+    cursor: pointer;
 
+}
 .cont2{
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
     margin-top: 20px;
-    margin-left: 5%;
+    margin-left: 6%;
 }
 
 .cont3{
@@ -58,16 +85,31 @@ textarea{
 }
 
 #sticktext{
-    width: 250px;
-    height: 250px;
-    font-size: 26px;
     padding: 20px;
+    width: 200px;
+    height: 200px;
+    font-size: 26px;
     overflow: hidden;
 }
+
 #stick{
+    padding: 10px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+    transition: transform .4s;
+}
+#stick:hover{
+    transform: scale(1.1);
+}
+#trashBTN{
+    float: right;
+    border: none;
+    font-size: 20px;
+}
+#trashBTN:hover{
+    cursor: pointer;
+    color: orangered;
 }
